# SecureShare

./: .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  alembic.ini  docker-compose.yml  index.html  pyproject.toml  reference.md  renovate.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml
api-collection/: secureshare.http
apps/api/: Dockerfile
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/audit/: service.py
apps/api/app/auth/: current_user.py  jwt.py  passwords.py  rate_limit.py
apps/api/app/authz/: client.py  dependencies.py  models.py  repair.py  service.py
apps/api/app/db/: base.py  session.py
apps/api/app/middleware/: pep.py
apps/api/app/models/: audit.py  authz_repair_job.py  base.py  document.py  group.py  tenant.py  user.py
apps/api/app/routers/: audit.py  auth.py  delegated.py  documents.py  health.py  shares.py
apps/api/app/schemas/: audit.py  auth.py  documents.py  health.py
apps/api/app/services/: delegation_service.py  (+1 more)
apps/api/tests/: __init__.py  conftest.py  test_authorization.py
docs/: api-contracts.md  architecture.md  attack-scenarios.md  codex-skill-secureshare.md  database-authorization.md  developer-guide.md  local-runbook.md  openapi.json  release-criteria.md  threat-model.md
infra/openfga/: model.fga  model.json  seed-tuples.json
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_authz_repair_jobs.py  0003_user_token_version.py
scripts/: bootstrap_openfga.py  export_openapi.py  process_authz_repair_jobs.py  seed.py
