[project]
name = "secureshare"
version = "0.1.0"
description = "Production-style reference app for multi-tenant document sharing with JWT, OpenFGA, Macaroons, and audit logging."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "psycopg[binary]>=3.2.1",
  "pydantic>=2.9.2",
  "email-validator>=2.2.0",
  "pydantic-settings>=2.5.2",
  "pymacaroons>=0.13.0",
  "pyjwt>=2.9.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.30.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0"
]

[tool.setuptools.packages.find]
where = ["apps/api"]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]
addopts = "-q"
